# audiobook

./: .gitignore  AGENTS.md  PRD-web-book-reader.md  align_audio.py  compare_cefr_sources.py  gemini_audiobook.py  index.html  my-youth-comedy.txt  oxford_cefr.py  package.json  pyproject.toml  run.py  sample-cefr-reader.html  sample-cefr-reader.json  test_phase1.py  vite.config.ts
app/: __init__.py  alignment.py  audio_generation.py  cefr.py  cefr_jobs.py  db.py  epub.py  library.py  main.py  olp_cefr.py  schemas.py  words.py
audio/my-youth-romantic-comedy-is-wrong-as-i-expected-vol-2/: chapter-04-part-011.alignment.json  chapter-04-part-012.alignment.json
books/: sakurasou-no-pet-na-kanojo-vol-1.epub
frontend/: index.html  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
legacy/: README.md
legacy/frontend/: index.html  package.json  vite.config.ts
legacy/python/: PRD-web-book-reader.md  README.md  cefr-source-comparison.html  gemini_audiobook.py  oxford_cefr.py  pyproject.toml  tech-stack.md  test_dictionary.py  test_phase1.py
legacy/python/app/: audio_generation.py  dictionary.py  epub.py  main.py  schemas.py
scripts/: align_part_audio.py  generate_kokoro_preview.py  kokoro_generate_part.py
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/cefr/: oxford-3000-5000-cefr.csv  oxford-3000-a1.txt
src-tauri/capabilities/: default.json
src-tauri/src/: cefr.rs  commands.rs  db.rs  dictionary.rs  epub.rs  lib.rs  main.rs  models.rs
src/lib/: api.ts
(+9 files in other folders)
