[project]
name = "audiobook-web-reader"
version = "0.1.0"
description = "Local-first web reader for CEFR-colored EPUB books."
requires-python = ">=3.12"
dependencies = [
  "faster-whisper>=1.1,<2",
  "fastapi>=0.111,<1",
  "lemminflect>=0.2.3,<1",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]

[tool.fastapi]
entrypoint = "app.main:app"
